WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275793
REGRESSION(
279769@main
): It regressed the score of MotionMark CanvasLines
https://bugs.webkit.org/show_bug.cgi?id=275793
Summary
REGRESSION(279769@main): It regressed the score of MotionMark CanvasLines
Said Abou-Hallawa
Reported
2024-06-23 10:38:07 PDT
279769@main
moved the inflate() call from HTMLCanvasElement::didDraw() to CanvasRenderingContext2DBase::didDraw(). But
279769@main
made CanvasRenderingContext2DBase::didDraw() call inflate() unconditionally. Before this change, HTMLCanvasElement::didDraw(), was calling inflate() only when adjustedRect was not null which means when m_dirtyRect.contains(dirtyRect) was false.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-23 10:38:35 PDT
<
rdar://problem/130373046
>
Said Abou-Hallawa
Comment 2
2024-06-23 10:43:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30096
EWS
Comment 3
2024-06-23 20:35:59 PDT
Committed
280295@main
(38fb2ecadd89): <
https://commits.webkit.org/280295@main
> Reviewed commits have been landed. Closing PR #30096 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug