REGRESSION(279769@main): It regressed the score of MotionMark CanvasLines https://bugs.webkit.org/show_bug.cgi?id=275793 rdar://130373046

Reviewed by Per Arne Vollan.

Call inflate() only when the dirtyRect is going to be used.

* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::didDraw):

Canonical link: https://commits.webkit.org/280295@main